tests/baselines/reference/parserErrorRecovery_ArgumentList7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList7.ts (4 errors) ====
    Foo(a,,
          ~
!!! error TS1135: Argument expression expected.
           
!!! error TS1005: ')' expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'a'.